--- a/css/modal/modal.css
+++ b/css/modal/modal.css
@@ -248,13 +248,15 @@
         row-gap: 5px;
     }
 
-    .modal__adding-file {
+    /* .modal__adding-file {
         grid-row: 5/6;
         grid-column: 2/3;
-    }
+    } */
 
     .modal__file {
         width: 250px;
+        grid-row: 5/6;
+        grid-column: 2/3;
     }
 
     .modal__total {
